Corregimos los enlaces de los trabajos

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <h3>LutherTFT</h3>
                         <p>A page created for a NFT of a alien that express how its the life in other dimension chilling with the boys</p>
                         <button type="button"><a href="https://luthertft.com" target="_blank">View Page</a></button>
-                        <button type="button"><a href="https://github.com/Scampt/LutherAlien">Github Repo</a></button>
+                        <button type="button"><a href="https://github.com/Scampt/LutherAlien" target="_blank">Github Repo</a></button>
                     </div>
                 </div>
 
@@ -109,8 +109,8 @@
                     <div class="col project-info">
                         <h3>Totaburger</h3>
                         <p>A page created for a friend to his hamburguers, also be my first real page created, little simple, but cool</p>
-                        <button type="button"><a href="https://luthertft.com" target="_blank">View Page</a></button>
-                        <button type="button"><a href="https://github.com/Scampt/LutherAlien">Github Repo</a></button>
+                        <button type="button"><a href="https://scampt.github.io/Totaburger" target="_blank">View Page</a></button>
+                        <button type="button"><a href="https://github.com/Scampt/Totaburger" target="_blank">Github Repo</a></button>
                     </div>
                 </div>
 
@@ -121,8 +121,8 @@
                     <div class="col project-info">
                         <h3>RentoCars</h3>
                         <p>A page created for a NFT of a alien that express how its the life in other dimension chilling with the boys</p>
-                        <button type="button"><a href="https://luthertft.com" target="_blank">View Page</a></button>
-                        <button type="button"><a href="https://github.com/Scampt/LutherAlien">Github Repo</a></button>
+                        <button type="button"><a href="https://scampt.github.io/rentocars-plantilla" target="_blank">View Page</a></button>
+                        <button type="button"><a href="https://github.com/rentocars-plantilla" target="_blank">Github Repo</a></button>
                     </div> 
                 </div>
             </section>
