Corregimos el enlace de repositorio de rentocars

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <h3>RentoCars</h3>
                         <p>A page created for a NFT of a alien that express how its the life in other dimension chilling with the boys</p>
                         <button type="button"><a href="https://scampt.github.io/rentocars-plantilla" target="_blank">View Page</a></button>
-                        <button type="button"><a href="https://github.com/rentocars-plantilla" target="_blank">Github Repo</a></button>
+                        <button type="button"><a href="https://github.com/Scampt/rentocars-plantilla" target="_blank">Github Repo</a></button>
                     </div> 
                 </div>
             </section>
