--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             <h3>Totaburger</h3>
                             <p>A page created for a friend to his hamburguers, also be my first real page created, little simple, but cool</p>
                             <a href="https://scampt.github.io/Totaburger" target="_blank"><button type="button">View Page</button></a>
-                            <a href="https://github.cm/Scampt/Totaburger" target="_blank"><button type="button">Github Repo</button></a>
+                            <a href="https://github.com/Scampt/Totaburger" target="_blank"><button type="button">Github Repo</button></a>
                         </div>
 
                         <div class="col-sm-12 project">
@@ -124,6 +124,16 @@
                             <p>A page created for a NFT of a alien that express how its the life in other dimension chilling with the boys</p>
                             <a href="https://scampt.github.io/rentocars-plantilla" target="_blank"><button type="button">View Page</button></a>
                             <a href="https://github.com/Scampt/rentocars-plantilla" target="_blank"><button type="button">Github Repo</button></a>
+                        </div>
+
+                        <div class="col-sm-12 project">
+                            <figure class="img-box">
+                                <img src="img/rento.png" alt="">
+                            </figure>
+                            <h3>House Of Burgers</h3>
+                            <p>A page created for a restaurant of hamburguers and good ambient in Cuautla Morelos MX</p>
+                            <a href="https://scampt.github.io/House-of-Burger/" target="_blank"><button type="button">View Page</button></a>
+                            <a href="https://github.com/Scampt/House-of-Burger" target="_blank"><button type="button">Github Repo</button></a>
                         </div>
                     </div>
                 </div>
