--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
                         <div class="col-sm-12 project">
                             <figure class="img-box">
-                                <img src="img/rento.png" alt="">
+                                <img src="img/houseofburger.png" alt="">
                             </figure>
                             <h3>House Of Burgers</h3>
                             <p>A page created for a restaurant of hamburguers and good ambient in Cuautla Morelos MX</p>
