--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
                             <h3>LutherTFT</h3>
                             <p>A page created for a NFT of a alien that express how its the life in other dimension chilling with the boys</p>
-                            <a href="https://luthertft.com" target="_blank"><button type="button">View Page</button></a>
+                            <a href="https://scampt.github.io/LutherAlien/" target="_blank"><button type="button">View Page</button></a>
                             <a href="https://github.com/Scampt/LutherAlien" target="_blank"><button type="button">Github Repo</button></a>
                         </div>
 
@@ -135,6 +135,17 @@
                             <a href="https://scampt.github.io/House-of-Burger/" target="_blank"><button type="button">View Page</button></a>
                             <a href="https://github.com/Scampt/House-of-Burger" target="_blank"><button type="button">Github Repo</button></a>
                         </div>
+
+                        <!-- PAGINA PARA HACER EL PROJECTO PIU_SCAMPT. EN PROCESO... -->
+                        <!-- <div class="col-sm-12 project">
+                            <figure class="img-box">
+                                <img src="img/piu_scampt.png" alt="">
+                            </figure>
+                            <h3>PIU_Scampt</h3>
+                            <p>A page that have maybe all the packs of songs for Pump It Up. Hope u enjoy it.</p>
+                            <a href="" target="_blank"><button type="button">View Page</button></a>
+                            <a href="" target="_blank"><button type="button">Github Repo</button></a>
+                        </div> -->
                     </div>
                 </div>
             </section>
