Agregamos la página PIU Scampt

--- a/index.html
+++ b/index.html
@@ -136,16 +136,15 @@
                             <a href="https://github.com/Scampt/House-of-Burger" target="_blank"><button type="button">Github Repo</button></a>
                         </div>
 
-                        <!-- PAGINA PARA HACER EL PROJECTO PIU_SCAMPT. EN PROCESO... -->
-                        <!-- <div class="col-sm-12 project">
+                        <div class="col-sm-12 project">
                             <figure class="img-box">
-                                <img src="img/piu_scampt.png" alt="">
+                                <img src="img/piuscampt.png" alt="">
                             </figure>
-                            <h3>PIU_Scampt</h3>
-                            <p>A page that have maybe all the packs of songs for Pump It Up. Hope u enjoy it.</p>
-                            <a href="" target="_blank"><button type="button">View Page</button></a>
-                            <a href="" target="_blank"><button type="button">Github Repo</button></a>
-                        </div> -->
+                            <h3>PIU Scampt</h3>
+                            <p>A page created for all the people who are searching for some pack of songs to play in the Pump It Up</p>
+                            <a href="https://scampt.github.io/PIU_Scampt" target="_blank"><button type="button">View Page</button></a>
+                            <a href="https://github.com/Scampt/PIU_Scampt" target="_blank"><button type="button">Github Repo</button></a>
+                        </div>
                     </div>
                 </div>
             </section>
