google site verification

--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es, en, fr, al">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css2?family=Aldrich&family=Orbitron:wght@400;500;600;700;800;900&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet"/>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Aldrich&family=Orbitron:wght@400;500;600;700;800;900&family=Rajdhani:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Kevin Quiroz</title>
+    <meta
+      name="google-site-verification"
+      content="350n4nn6wxjdycja-KyqTzcT30tydy9zSLQrgsCZoq4"
+    />
   </head>
   <body>
     <div id="root"></div>
